fixing small bugs and layout on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@
   position: relative;
   height: 64px;
   border-top: solid 1px gray;
-  min-width: 570px;
+  //min-width: 570px;
   padding-left: 70px;
   padding-top: 11px;
   font-size: 30px;
@@ -188,14 +188,20 @@
 }
 
 .instrumentRow {
+  width: 590px;
+  height: 64px;
+  margin-left: 0px;
+  text-align: center;
+}
+
+.instrumentRowWrap {
   position: fixed;
   bottom: 0px;
   padding-bottom: 10px;
-  width: 590px;
+  width: 100%;
   height: 74px;
   background: white;
-  //border-top: solid 1px gray;
-  text-align: center;
+  overflow-x: auto;
 }
 
 .colorRowWrap {
